# AudiblePlanets

./: .clang-format  .clang-format-old  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README2.md
.github/: FUNDING.yml  build-actions.yml  build_actions.yml
.github/workflows/: build-action.yml
Resources/: layout.json
Source/: APColors.h  APLevelMeter.cpp  APLevelMeter.h  APModAdditions.h  APSampler.cpp  APSampler.h  APSamplerVoice.cpp  APSamplerVoice.h  AuxSynth.cpp  AuxSynth.h  AuxSynthVoice.cpp  AuxSynthVoice.h  DevEditor.cpp  DevEditor.h  DevPanels.h  Editor.cpp  Editor.h  Envelope.cpp  Envelope.h  EnvelopeComponent.h  FXEditor.cpp  FXEditor.h  FXPanels.h  FXProcessors.h  FastMath.hpp  Fonts.cpp  Fonts.h  LFO.h  MacrosEditor.cpp  MacrosEditor.h  MacrosPanels.h  ModEditor.cpp  ModEditor.h  MoonKnob.cpp  MoonKnob.h  MoonSlider.cpp  MoonSlider.h  MsegEditor.cpp  MsegEditor.h  MsegPanels.h  (+29 more)
Source/DSP/: AuxSynth.cpp  AuxSynth.h  AuxSynthVoice.cpp  AuxSynthVoice.h  Downsampling.cpp  Downsampling.h  Envelope.cpp  Envelope.h  FXProcessors.h  FastMath.hpp  LFO.h  Oscillator.cpp  Oscillator.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  SynthVoice2.h  SynthVoice3.cpp  SynthVoice3.h
Source/UI/: APColors.h  APLevelMeter.cpp  APLevelMeter.h  APModAdditions.h  Editor.cpp  Editor.h  EnvelopeComponent.h  FXEditor.cpp  FXEditor.h  FXPanels.h  Fonts.cpp  Fonts.h  ModEditor.cpp  ModEditor.h  ModPanels.h  OrbitViz.h  Panels.h  PluginEditor.cpp  PluginEditor.h
assets/: Basic Horn 2.xml  Basic Horn Section.xml  Bell sketch newest.xml  Brass Section.xml  Buzz Pad 2.xml  Buzz Pad.xml  Caustic Lead.xml  Chime Bot.xml  Clarinet Section.xml  Clashing Strings.xml  Diner Cherry Pie.xml  Dream Repeater.xml  Drone Scene.xml  Endurance Like the Liberty Bell.xml  Evolving Superball.xml  Foreign Keypad.xml  Friend-shaped.xml  Fuzzy Banjoid.xml  Gentle Horn Section.xml  Have One On Me.xml  I Have Tried Subtlety.xml  Kitten Lead.xml  Let Banjo Ring.xml  March of the Mugwump.xml  Mentat Holiday.xml  Metal Pan.xml  Metallic Keys.xml  Muted Brass.xml  Nasty Sub.xml  Pulsating Pad.xml  Rando Buzz.xml  Ring Keys 2.xml  Ring Keys.xml  Sfaaa8.xml  Shadow Bones.xml  Space Lead.xml  Spacy Bell.xml  Swell Keys.xml  Swell Lead.xml  Venus Dawn.xml  (+5 more)
scripts/: convert-presets.py
